--- a/examples/5_Affine_or_Rigid_Only.ipynb
+++ b/examples/5_Affine_or_Rigid_Only.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# set image file names\n",
     "template_file_name = '../notebook/human_brain_affine.img'\n",
-    "target_file_name = '../notebook/\n",
+    "target_file_name = '../notebook/Adt27-55_03_Adt27-55_03_MNI.img'\n",
     "\n",
     "# load images\n",
     "template_image_struct = nib.load(template_file_name)\n",
@@ -254,13 +254,7 @@
       "iter: 98, E= 24937898.000, ER= 0.000, EM= 24937898.000, epd= 0.000, time= 0.12s.\n",
       "iter: 99, E= 24824712.000, ER= 0.000, EM= 24824712.000, epd= 0.000, time= 0.12s.\n",
       "iter: 100, E= 24710658.000, ER= 0.000, EM= 24710658.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 101, E= 24595492.000, ER= 0.000, EM= 24595492.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 101, E= 24595492.000, ER= 0.000, EM= 24595492.000, epd= 0.000, time= 0.12s.\n",
       "iter: 102, E= 24479320.000, ER= 0.000, EM= 24479320.000, epd= 0.000, time= 0.12s.\n",
       "iter: 103, E= 24362812.000, ER= 0.000, EM= 24362812.000, epd= 0.000, time= 0.12s.\n",
       "iter: 104, E= 24245998.000, ER= 0.000, EM= 24245998.000, epd= 0.000, time= 0.12s.\n",
@@ -360,13 +354,7 @@
       "iter: 198, E= 20371434.000, ER= 0.000, EM= 20371434.000, epd= 0.000, time= 0.12s.\n",
       "iter: 199, E= 20376696.000, ER= 0.000, EM= 20376696.000, epd= 0.000, time= 0.12s.\n",
       "iter: 200, E= 20381180.000, ER= 0.000, EM= 20381180.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 201, E= 20384894.000, ER= 0.000, EM= 20384894.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 201, E= 20384894.000, ER= 0.000, EM= 20384894.000, epd= 0.000, time= 0.12s.\n",
       "iter: 202, E= 20387524.000, ER= 0.000, EM= 20387524.000, epd= 0.000, time= 0.12s.\n",
       "iter: 203, E= 20388816.000, ER= 0.000, EM= 20388816.000, epd= 0.000, time= 0.12s.\n",
       "iter: 204, E= 20388786.000, ER= 0.000, EM= 20388786.000, epd= 0.000, time= 0.12s.\n",
@@ -466,13 +454,7 @@
       "iter: 298, E= 21029830.000, ER= 0.000, EM= 21029830.000, epd= 0.000, time= 0.12s.\n",
       "iter: 299, E= 21115668.000, ER= 0.000, EM= 21115668.000, epd= 0.000, time= 0.12s.\n",
       "iter: 300, E= 21202012.000, ER= 0.000, EM= 21202012.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 301, E= 21288880.000, ER= 0.000, EM= 21288880.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 301, E= 21288880.000, ER= 0.000, EM= 21288880.000, epd= 0.000, time= 0.12s.\n",
       "iter: 302, E= 21375904.000, ER= 0.000, EM= 21375904.000, epd= 0.000, time= 0.12s.\n",
       "iter: 303, E= 21463160.000, ER= 0.000, EM= 21463160.000, epd= 0.000, time= 0.12s.\n",
       "iter: 304, E= 21550450.000, ER= 0.000, EM= 21550450.000, epd= 0.000, time= 0.12s.\n",
@@ -572,13 +554,7 @@
       "iter: 398, E= 22955068.000, ER= 0.000, EM= 22955068.000, epd= 0.000, time= 0.12s.\n",
       "iter: 399, E= 22884402.000, ER= 0.000, EM= 22884402.000, epd= 0.000, time= 0.12s.\n",
       "iter: 400, E= 22811770.000, ER= 0.000, EM= 22811770.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 401, E= 22737088.000, ER= 0.000, EM= 22737088.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 401, E= 22737088.000, ER= 0.000, EM= 22737088.000, epd= 0.000, time= 0.12s.\n",
       "iter: 402, E= 22660594.000, ER= 0.000, EM= 22660594.000, epd= 0.000, time= 0.12s.\n",
       "iter: 403, E= 22582060.000, ER= 0.000, EM= 22582060.000, epd= 0.000, time= 0.12s.\n",
       "iter: 404, E= 22501528.000, ER= 0.000, EM= 22501528.000, epd= 0.000, time= 0.12s.\n",
@@ -678,13 +654,7 @@
       "iter: 498, E= 16685428.000, ER= 0.000, EM= 16685428.000, epd= 0.000, time= 0.12s.\n",
       "iter: 499, E= 16678924.000, ER= 0.000, EM= 16678924.000, epd= 0.000, time= 0.12s.\n",
       "iter: 500, E= 16672550.000, ER= 0.000, EM= 16672550.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 501, E= 16666292.000, ER= 0.000, EM= 16666292.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 501, E= 16666292.000, ER= 0.000, EM= 16666292.000, epd= 0.000, time= 0.12s.\n",
       "iter: 502, E= 16660157.000, ER= 0.000, EM= 16660157.000, epd= 0.000, time= 0.12s.\n",
       "iter: 503, E= 16653991.000, ER= 0.000, EM= 16653991.000, epd= 0.000, time= 0.12s.\n",
       "iter: 504, E= 16647698.000, ER= 0.000, EM= 16647698.000, epd= 0.000, time= 0.12s.\n",
@@ -784,13 +754,7 @@
       "iter: 598, E= 20251668.000, ER= 0.000, EM= 20251668.000, epd= 0.000, time= 0.12s.\n",
       "iter: 599, E= 20284398.000, ER= 0.000, EM= 20284398.000, epd= 0.000, time= 0.12s.\n",
       "iter: 600, E= 20315952.000, ER= 0.000, EM= 20315952.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 601, E= 20346168.000, ER= 0.000, EM= 20346168.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 601, E= 20346168.000, ER= 0.000, EM= 20346168.000, epd= 0.000, time= 0.12s.\n",
       "iter: 602, E= 20375142.000, ER= 0.000, EM= 20375142.000, epd= 0.000, time= 0.12s.\n",
       "iter: 603, E= 20402628.000, ER= 0.000, EM= 20402628.000, epd= 0.000, time= 0.12s.\n",
       "iter: 604, E= 20428700.000, ER= 0.000, EM= 20428700.000, epd= 0.000, time= 0.12s.\n",
@@ -890,13 +854,7 @@
       "iter: 698, E= 16055886.000, ER= 0.000, EM= 16055886.000, epd= 0.000, time= 0.12s.\n",
       "iter: 699, E= 15948082.000, ER= 0.000, EM= 15948082.000, epd= 0.000, time= 0.12s.\n",
       "iter: 700, E= 15838366.000, ER= 0.000, EM= 15838366.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 701, E= 15726758.000, ER= 0.000, EM= 15726758.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 701, E= 15726758.000, ER= 0.000, EM= 15726758.000, epd= 0.000, time= 0.12s.\n",
       "iter: 702, E= 15613299.000, ER= 0.000, EM= 15613299.000, epd= 0.000, time= 0.12s.\n",
       "iter: 703, E= 15498188.000, ER= 0.000, EM= 15498188.000, epd= 0.000, time= 0.12s.\n",
       "iter: 704, E= 15381658.000, ER= 0.000, EM= 15381658.000, epd= 0.000, time= 0.12s.\n",
@@ -996,13 +954,7 @@
       "iter: 798, E= 20014424.000, ER= 0.000, EM= 20014424.000, epd= 0.000, time= 0.13s.\n",
       "iter: 799, E= 20044808.000, ER= 0.000, EM= 20044808.000, epd= 0.000, time= 0.12s.\n",
       "iter: 800, E= 20072168.000, ER= 0.000, EM= 20072168.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 801, E= 20096538.000, ER= 0.000, EM= 20096538.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 801, E= 20096538.000, ER= 0.000, EM= 20096538.000, epd= 0.000, time= 0.12s.\n",
       "iter: 802, E= 20117894.000, ER= 0.000, EM= 20117894.000, epd= 0.000, time= 0.12s.\n",
       "iter: 803, E= 20136364.000, ER= 0.000, EM= 20136364.000, epd= 0.000, time= 0.12s.\n",
       "iter: 804, E= 20152056.000, ER= 0.000, EM= 20152056.000, epd= 0.000, time= 0.12s.\n",
@@ -1102,13 +1054,7 @@
       "iter: 898, E= 15056785.000, ER= 0.000, EM= 15056785.000, epd= 0.000, time= 0.12s.\n",
       "iter: 899, E= 15043832.000, ER= 0.000, EM= 15043832.000, epd= 0.000, time= 0.12s.\n",
       "iter: 900, E= 15033220.000, ER= 0.000, EM= 15033220.000, epd= 0.000, time= 0.12s.\n",
-      "iter: 901, E= 15024724.000, ER= 0.000, EM= 15024724.000, epd= 0.000, time= 0.12s.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iter: 901, E= 15024724.000, ER= 0.000, EM= 15024724.000, epd= 0.000, time= 0.12s.\n",
       "iter: 902, E= 15018180.000, ER= 0.000, EM= 15018180.000, epd= 0.000, time= 0.12s.\n",
       "iter: 903, E= 15013516.000, ER= 0.000, EM= 15013516.000, epd= 0.000, time= 0.12s.\n",
       "iter: 904, E= 15010641.000, ER= 0.000, EM= 15010641.000, epd= 0.000, time= 0.12s.\n",
@@ -1282,7 +1228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1296,9 +1242,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
